# sacred-queens

./: README.md
backend/: Cargo.toml  run_test_env.sh
backend/src/: main.rs
contracts/: Cargo.toml  README.md
contracts/src/: main.rs
contracts/vyper/: berserkers.vy  compile.sh  eggs.vy  guardians.vy  queens.vy  sacred_queens.vy
demo/client/: Cargo.toml  Trunk.toml  index.html
demo/client/src/: backend.rs  hives.rs  key_helpers.rs  main.rs  swarm.rs
demo/server/: Cargo.toml  create_mongodb.sh
demo/server/src/: main.rs  model.rs  test.rs
ido/: .gitignore  Cargo.toml  index.html
ido/abi/: sacred_queens.vy.abi
ido/js/: ethereum.js
ido/src/: main.rs
