[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.0.4"
actix-web = "4.0.1"
lazy_static = "1.4.0"
once_cell = "1.12.0"
secp256k1 = { version = "0.21", features = ["recovery"] }
web3 = "0.18.0"
