[package]
edition = "2021"
name = "client"
version = "0.1.0"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.14"
reqwasm = "0.4.1"
serde = "1.0.136"
serde_json = { version = "1.0" }
sycamore = { version = "0.8.0-beta.3", features = ["suspense"] }
rand = { version = "0.7", features = ["wasm-bindgen"] }
ed25519-dalek = "=1.0.1"
bs58 = "0.4.0"
gloo-timers = { version = "0.2.3", features = ["futures"] }
anyhow = "1.0"

[dependencies.web-sys]
features = ["InputEvent", "KeyboardEvent", "Location", "Storage"]
version = "0.3.56"

