[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-http = "3"
futures-util = "0.3"
mongodb = { version = "2.1" }
chrono = { version = "0.4", features = [ "serde" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
http = "0.2"
rand = "0.7"
ed25519-dalek = "=1.0.1"
bs58 = "0.4.0"
anyhow = "1.0"
futures = "0.3"
